Remoção da sidebar e adicionado menu na toolbar

--- a/client/react/src/App.css
+++ b/client/react/src/App.css
@@ -1,3 +1,11 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* margin: 0 0 60px; */
+}
+
 @font-face {
   font-family: 'FrederickaGreat';
   src: url('./fredericka-great.ttf') format('truetype');
