--- a/client/react/src/App.css
+++ b/client/react/src/App.css
@@ -1,10 +1,16 @@
 html {
   position: relative;
   min-height: 100%;
+  height: 100%;
 }
 body {
-  /* margin: 0 0 60px; */
   font-family: Arial, Helvetica, sans-serif;
+  min-height: 100%;
+  height: 100%;
+}
+
+#app {
+  height: 100%;
 }
 
 @font-face {
